// file: pkg/auth/proto/types/security_policy.proto
// version: 1.0.0
// guid: 1d12dbb5-c796-48b9-beab-f89a58a4d115

edition = "2023";

package gcommon.v1.auth;

import "google/protobuf/duration.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";

/**
 * SecurityPolicy defines account and token security requirements.
 */
message SecurityPolicy {
  // Minimum password length requirement
  uint32 min_password_length = 1;

  // Password expiration duration
  google.protobuf.Duration password_ttl = 2;

  // Maximum failed login attempts before lockout
  uint32 max_failed_attempts = 3;
}
